# K-Log

./: CMakeLists.txt  Makefile  README.md
src/: common.h  config.h  keysym.m  logged  main.m
